--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-hook-form": "^7.17.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "serve": "^13.0.2",
     "socket.io-client": "^4.3.2",
     "web-vitals": "^1.0.1"
   },
